---
source: src/parser.rs
expression: ast
---
ASTNode {
    start: 0,
    end: 34,
    type: BinaryOpNode {
        op: Plus,
        left: ASTNode {
            start: 0,
            end: 21,
            type: BinaryOpNode {
                op: Multiply,
                left: ASTNode {
                    start: 0,
                    end: 1,
                    type: UnaryOpNode {
                        op: Minus,
                        operand: ASTNode {
                            start: 1,
                            end: 1,
                            type: Identifier {
                                name: "b",
                            },
                        },
                    },
                },
                right: ASTNode {
                    start: 5,
                    end: 21,
                    type: BinaryOpNode {
                        op: Plus,
                        left: ASTNode {
                            start: 6,
                            end: 8,
                            type: UnaryOpNode {
                                op: Minus,
                                operand: ASTNode {
                                    start: 7,
                                    end: 8,
                                    type: Identifier {
                                        name: "ca",
                                    },
                                },
                            },
                        },
                        right: ASTNode {
                            start: 12,
                            end: 20,
                            type: BinaryOpNode {
                                op: Dot,
                                left: ASTNode {
                                    start: 12,
                                    end: 12,
                                    type: Identifier {
                                        name: "a",
                                    },
                                },
                                right: ASTNode {
                                    start: 20,
                                    end: 20,
                                    type: Identifier {
                                        name: "c",
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
        right: ASTNode {
            start: 25,
            end: 34,
            type: BinaryOpNode {
                op: Wedge,
                left: ASTNode {
                    start: 25,
                    end: 25,
                    type: Identifier {
                        name: "a",
                    },
                },
                right: ASTNode {
                    start: 34,
                    end: 34,
                    type: Identifier {
                        name: "b",
                    },
                },
            },
        },
    },
}
